@@ -1,3 +1,31 @@
-/Data-MethodProxy*
-/.build
-.*.swp
+/.build/
+/_build/
+/Build
+/Build.bat
+/blib
+/Makefile
+/pm_to_blib
+
+/carton.lock
+/.carton/
+/local/
+
+nytprof.out
+nytprof/
+
+cover_db/
+
+*.bak
+*.old
+*~
+*.swp
+*.o
+*.obj
+
+!LICENSE
+
+/_build_params
+
+MYMETA.*
+
+/Data-MethodProxy-*
