@@ -1,2 +1,0 @@
-dist.ini
-MANIFEST.SKIP
